; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/arm_atsam/extr_eeprom.c_eeprom_update_word.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/arm_atsam/extr_eeprom.c_eeprom_update_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eeprom_update_word(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  store i32* %6, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = getelementptr inbounds i32, i32* %7, i32 1
  store i32* %8, i32** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @eeprom_write_byte(i32* %7, i32 %9)
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = ashr i32 %12, 8
  %14 = call i32 @eeprom_write_byte(i32* %11, i32 %13)
  ret void
}

declare dso_local i32 @eeprom_write_byte(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
